# desafios_nlp

./: .gitignore  Desafio_1.ipynb  README.md  pyproject.toml
Desafio_1/: Desafio_1.ipynb
Desafio_2/: Desafio_2.ipynb  vectors.tsv
Desafio_3/: Desafio_3.ipynb  GRU.keras  LSTM.keras  simpleRNN.keras
Desafio_4/: Desafio_4_bot.ipynb  Desafio_4_traductor.ipynb
