[project]
name = "desafios-nlp"
version = "0.1.0"
description = "Desafíos de Procesamiento de Lenguaje Natural - CEIA FIUBA"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "gensim",
    "tensorflow",
    "plotly",
    "jupyter",
]

[tool.uv]
dev-dependencies = [
    "ipykernel",
]
